--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Pass Bakery</title>
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <h1>Pass Bakery</h1>
