finished button styling, add ids to h2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <hr>
         <div id="items-container">
-            <h2>Coffee</h2>
+            <h2 id="menu-title">Coffee</h2>
             <ul>
                 <li>
                     <button name="espresso">
@@ -51,19 +51,59 @@
                     </button>
                 </li>
             </ul>
-            <h2>Breakfast</h2>
+            <h2 id="menu-title">Breakfast</h2>
             <ul>
-                <li><button name="oatmeal">Oatmeal: $4.00</button></li>
-                <li><button name="toast">Toast: $3.50</button></li>
-                <li><button name="egg-sandwich">Egg Sandwich: $5.50</button></li>
-                <li><button name="egg-cheese-sandwich">Egg and Cheese Sandwich: $6.50</button></li>
+                <li>
+                    <button name="oatmeal">
+                        <span id="button-title">Oatmeal</span><br>
+                        <span id="button-price">$4.00</span>
+                    </button>
+                </li>
+                <li>
+                    <button name="toast">
+                        <span id="button-title">Toast</span><br>
+                        <span id="button-price">$3.50</span>
+                    </button>
+                </li>
+                <li>
+                    <button name="egg-sandwich">
+                        <span id="button-title">Egg Sandwich</span><br>
+                        <span id="button-price">$5.50</span>
+                    </button>
+                </li>
+                <li>
+                    <button name="egg-cheese-sandwich">
+                        <span id="button-title">Egg and Cheese Sandwich</span><br>
+                        <span id="button-price">$6.50</span>
+                    </button>
+                </li>
             </ul>
-            <h2>Breads</h2>
+            <h2 id="menu-title">Breads</h2>
             <ul>
-                <li><button name="pain-campagne">Pain de campagne: $7.00</button></li>
-                <li><button name="olive-lemon">Olive and lemon: $7.50</button></li>
-                <li><button name="brioche">Brioche: $8.00</button></li>
-                <li><button name="ciabatta">Ciabatta: $5.50</button></li>
+                <li>
+                    <button name="pain-campagne">
+                        <span id="button-title">Pain de campagne</span><br>
+                        <span id="button-price">$7.00</span>
+                    </button>
+                </li>
+                <li>
+                    <button name="olive-lemon">
+                        <span id="button-title">Olive and lemon</span><br>
+                        <span id="button-price">$7.50</span>
+                    </button>
+                </li>
+                <li>
+                    <button name="brioche">
+                        <span id="button-title">Brioche</span><br>
+                        <span id="button-price">$8.00</span>
+                    </button>
+                </li>
+                <li>
+                    <button name="ciabatta">
+                        <span id="button-title">Ciabatta</span><br>
+                        <span id="button-price">$5.50</span>
+                    </button>
+                </li>
             </ul>
         </div>
     </body>
