changed ids to classes

--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
             <ul>
                 <li>
                     <button name="espresso">
-                        <span id="button-title">Espresso</span><br>
-                        <span id="button-price">$2.75</span>
+                        <span class="button-title">Espresso</span><br>
+                        <span class="button-price">$2.75</span>
                     </button>
                 </li>
                 <li>
                     <button name="cappuccino">
-                        <span id="button-title">Cappuccino</span><br>
-                        <span id="button-price">$3.50</span>
+                        <span class="button-title">Cappuccino</span><br>
+                        <span class="button-price">$3.50</span>
                     </button>
                 </li>
                 <li>
                     <button name="latte">
-                        <span id="button-title">Latte</span><br>
-                        <span id="button-price">$4.00</span>
+                        <span class="button-title">Latte</span><br>
+                        <span class="button-price">$4.00</span>
                     </button>
                 </li>
                 <li>
                     <button name="drip">
-                        <span id="button-title">Drip</span><br>
-                        <span id="button-price">$2.50</span>
+                        <span class="button-title">Drip</span><br>
+                        <span class="button-price">$2.50</span>
                     </button>
                 </li>
                 <li>
                     <button name="pour-over">
-                        <span id="button-title">Pour Over</span><br>
-                        <span id="button-price">$4.75</span>
+                        <span class="button-title">Pour Over</span><br>
+                        <span class="button-price">$4.75</span>
                     </button>
                 </li>
             </ul>
@@ -55,26 +55,26 @@
             <ul>
                 <li>
                     <button name="oatmeal">
-                        <span id="button-title">Oatmeal</span><br>
-                        <span id="button-price">$4.00</span>
+                        <span class="button-title">Oatmeal</span><br>
+                        <span class="button-price">$4.00</span>
                     </button>
                 </li>
                 <li>
                     <button name="toast">
-                        <span id="button-title">Toast</span><br>
-                        <span id="button-price">$3.50</span>
+                        <span class="button-title">Toast</span><br>
+                        <span class="button-price">$3.50</span>
                     </button>
                 </li>
                 <li>
                     <button name="egg-sandwich">
-                        <span id="button-title">Egg Sandwich</span><br>
-                        <span id="button-price">$5.50</span>
+                        <span class="button-title">Egg Sandwich</span><br>
+                        <span class="button-price">$5.50</span>
                     </button>
                 </li>
                 <li>
                     <button name="egg-cheese-sandwich">
-                        <span id="button-title">Egg and Cheese Sandwich</span><br>
-                        <span id="button-price">$6.50</span>
+                        <span class="button-title">Egg and Cheese Sandwich</span><br>
+                        <span class="button-price">$6.50</span>
                     </button>
                 </li>
             </ul>
@@ -82,26 +82,26 @@
             <ul>
                 <li>
                     <button name="pain-campagne">
-                        <span id="button-title">Pain de campagne</span><br>
-                        <span id="button-price">$7.00</span>
+                        <span class="button-title">Pain de campagne</span><br>
+                        <span class="button-price">$7.00</span>
                     </button>
                 </li>
                 <li>
                     <button name="olive-lemon">
-                        <span id="button-title">Olive and lemon</span><br>
-                        <span id="button-price">$7.50</span>
+                        <span class="button-title">Olive and lemon</span><br>
+                        <span class="button-price">$7.50</span>
                     </button>
                 </li>
                 <li>
                     <button name="brioche">
-                        <span id="button-title">Brioche</span><br>
-                        <span id="button-price">$8.00</span>
+                        <span class="button-title">Brioche</span><br>
+                        <span class="button-price">$8.00</span>
                     </button>
                 </li>
                 <li>
                     <button name="ciabatta">
-                        <span id="button-title">Ciabatta</span><br>
-                        <span id="button-price">$5.50</span>
+                        <span class="button-title">Ciabatta</span><br>
+                        <span class="button-price">$5.50</span>
                     </button>
                 </li>
             </ul>
