--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <hr>
         <div id="items-container">
-            <h2 id="menu-title">Coffee</h2>
+            <h2 class="menu-title">Coffee</h2>
             <ul>
                 <li>
                     <button name="espresso">
@@ -51,7 +51,7 @@
                     </button>
                 </li>
             </ul>
-            <h2 id="menu-title">Breakfast</h2>
+            <h2 class="menu-title">Breakfast</h2>
             <ul>
                 <li>
                     <button name="oatmeal">
@@ -78,7 +78,7 @@
                     </button>
                 </li>
             </ul>
-            <h2 id="menu-title">Breads</h2>
+            <h2 class="menu-title">Breads</h2>
             <ul>
                 <li>
                     <button name="pain-campagne">
